# nlp_for_esgf

./: .gitignore  .pre-commit-config.yaml  README.md  create_database.py  find_variables.py  pyproject.toml  setup.sh  wut_variable.py
.github/workflows/: ci.yaml
tests/: test_wut.py
