[project]
name = "nlp-for-esgf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "gitpython>=3.1.46",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "scipy>=1.17.0",
]
