[project]
name = "nlp-for-esgf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "gitpython>=3.1.46",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "scipy>=1.17.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint] # see https://docs.astral.sh/ruff/rules/ for what these mean
select = ["E", "F", "I"]
ignore = ["E501"]